refactor:alter Prog3.html

--- a/Prog3.html
+++ b/Prog3.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Minha Galeria</title>
+        <title>Minha galeria de Fotos</title>
     </head>
     <body>
-        <h1>Minha galeria de Fotos</h1>
+        <h1>Minha galeria de fotos</h1>
         <ul>
             <li>
-                <a href="https://www.google.com.br/">
-                    <img src="https://encurtador.com.br/cH258" alt="numero 1"> 
+                <a href="https://www.google.com">
+                    <img src="https://cdn.nba.com/teams/uploads/sites/1610612750/2022/11/1080x1080.png"alt="imagem 1">
                 </a>
             </li>
             <li>
-                <a href="https://www.google.com.br/">
-                    <img src="https://encurtador.com.br/rxAS2" alt="numero 2">
+                <a href="https://www.google.com">
+                    <img src="https://cdn.nba.com/teams/uploads/sites/1610612750/2022/11/1080x1080.png"alt="imagem 2">
                 </a>
             </li>
             <li>
-                <a href="https://www.google.com.br/">
-                    <img src="https://encurtador.com.br/btEI7" alt="numero 3">
+                <a href="https://www.google.com">
+                    <img src="https://cdn.nba.com/teams/uploads/sites/1610612750/2022/11/1080x1080.png"alt="imagem 3">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.google.com">
+                    <img src="https://cdn.nba.com/teams/uploads/sites/1610612750/2022/11/1080x1080.png"alt="imagem 4">
                 </a>
             </li>
         </ul>
+        <footer>
+            <p>Entre em contato</p>
+            <p>Endereço: Rua Principal, 123</p>
+            <p>Telefone: 66 6666-6666</p>
+            <p>Email: igor_@gmail.com</p>
+        </footer>
     </body>
 </html>
